js/src/tests/test262/built-ins/Number/NEGATIVE_INFINITY/prop-desc.js
verifyNotEnumerable
(
Number
"
NEGATIVE_INFINITY
"
)
;
verifyNotWritable
(
Number
"
NEGATIVE_INFINITY
"
)
;
verifyNotConfigurable
(
Number
"
NEGATIVE_INFINITY
"
)
;
reportCompare
(
0
0
)
;
